Sugati/src/objects/Group_Member__c.object
<CustomObject>
    <description>A list of people that are travelling...</description>
    <fields>
        <fullName>BirthDate_Formula__c</fullName>
        <formula>IF(  
   AND(
       OR(
         MONTH(GM_Opportunity__r.O_Departure_Date__c)&lt;= MONTH(GM_Contact__r.Birthdate),                 
	 MONTH(GM_Contact__r.Birthdate)&lt;= MONTH(GM_Opportunity__r.O_Return_Date__c)
         ),          
       OR(
         DAY(GM_Opportunity__r.O_Departure_Date__c)&lt;= DAY(GM_Contact__r.Birthdate), 
         DAY(GM_Contact__r.Birthdate)&lt;= DAY(GM_Opportunity__r.O_Return_Date__c)
         )
    ),
         true,false
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BirthDate Formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Birthday_Alert_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Birthday Alert Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM_Age__c</fullName>
        <label>Age</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GM_Client_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Group</label>
        <referenceTo>Client_Group__c</referenceTo>
        <relationshipLabel>Group Members</relationshipLabel>
        <relationshipName>Group_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GM_Client_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Payment</label>
        <referenceTo>Client_Payment__c</referenceTo>
        <relationshipLabel>Group Members</relationshipLabel>
        <relationshipName>Group_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GM_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Group Members</relationshipLabel>
        <relationshipName>Group_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GM_DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GM_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GM_First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GM_Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GM_Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GM_Lead_Passenger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Passenger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM_Name__c</fullName>
        <formula>Text(GM_Contact__r.Salutation) +&apos; &apos;+  GM_Contact__r.FirstName +&apos; &apos;+  GM_Contact__r.C_Middle_Name__c  +&apos; &apos;+GM_Contact__r.LastName</formula>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GM_Nationality__c</fullName>
        <label>Nationality</label>
        <picklist>
            <picklistValues>
                <fullName>British</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albanian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algerian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angolan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antiguans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentinean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austrian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahraini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladeshi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbadian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbudans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarusian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belizean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beninese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazilian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bruneian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkinabe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GM_Occupancy_Type__c</fullName>
        <label>Occupancy Type</label>
        <picklist>
            <picklistValues>
                <fullName>Adult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GM_Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Group Members</relationshipLabel>
        <relationshipName>Group_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GM_Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GM_Relationship__c</fullName>
        <label>Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Mother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grand Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grand Mother</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GM_Salutation__c</fullName>
        <label>Salutation</label>
        <picklist>
            <picklistValues>
                <fullName>Mr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Passport_Expiry_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Passport Expiry Check</label>
        <type>Checkbox</type>
    </fields>
    <label>Group Member</label>
    <nameField>
        <displayFormat>GM-{0000000000}</displayFormat>
        <label>Group Member ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>